【数据统计】模块完结