@@ -6,11 +6,13 @@ import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.time.LocalTime;
 import java.util.ArrayList;
-import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
+import com.sky.constant.MessageConstant;
+import com.sky.constant.SymbolConstant;
+import com.sky.exception.ReportExportException;
+import com.sky.exception.RequestParamInvalidException;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import org.apache.commons.lang.StringUtils;
@@ -35,161 +37,156 @@ import javax.servlet.http.HttpServletResponse;
 
 @Service
 public class ReportServiceImpl implements ReportService {
-
     @Autowired
     private OrderMapper orderMapper;
-
     @Autowired
     private UserMapper userMapper;
-
     @Autowired
     private WorkspaceService workspaceService;
 
     /**
-     * 营业额统计
+     * 根据时间区间统计营业额
      *
-     * @param begin
-     * @param end
-     * @return
+     * @param begin 统计开始时间
+     * @param end   统计结束时间
      */
     @Override
     public TurnoverReportVO getTurnoverReport(LocalDate begin, LocalDate end) {
-
-        List<LocalDate> dates = new ArrayList<>();
-        dates.add(begin);
-        while (begin.equals(end)) {
+        // 检查起止时间是否合法
+        if (begin.isAfter(end)) {
+            throw new RequestParamInvalidException(MessageConstant.BEGIN_TIME_IS_LATER_THAN_END_TIME);
+        }
+        // 生成x轴数据-日期列表
+        List<LocalDate> dateList = new ArrayList<>();
+        do {
+            dateList.add(begin);
             begin = begin.plusDays(1);
-            dates.add(begin);
-        }
-
-        List<Double> turnoverList = new ArrayList<>();
-        for (LocalDate date : dates) {
-            LocalDateTime beginTime = LocalDateTime.of(date, LocalTime.MIN);
-            LocalDateTime endTime = LocalDateTime.of(date, LocalTime.MAX);
-            Map<String, Object> map = new HashMap<>();
-            map.put("status", Orders.COMPLETED);
-            map.put("begin", beginTime);
-            map.put("end", endTime);
-            Double turnover = orderMapper.sumByMap(map);
-            turnover = turnover == null ? 0.0 : turnover;
-            turnoverList.add(turnover);
-        }
-
+        } while (!begin.isAfter(end));
+        // 生成y轴数据-营业额列表
+        List<Double> turnoverList = dateList.stream()
+                .map(date -> {
+                    Double turnover = orderMapper.sumByMap(Map.of(
+                            "begin", LocalDateTime.of(date, LocalTime.MIN),
+                            "end", LocalDateTime.of(date, LocalTime.MAX),
+                            "status", Orders.COMPLETED
+                    ));
+                    return turnover != null ? turnover : 0.0;
+                })
+                .toList();
+        // 返回结果数据
         return TurnoverReportVO.builder()
-                .dateList(StringUtils.join(dates, ","))
-                .turnoverList(StringUtils.join(turnoverList, ","))
+                .dateList(StringUtils.join(dateList, SymbolConstant.COMMA))
+                .turnoverList(StringUtils.join(turnoverList, SymbolConstant.COMMA))
                 .build();
     }
 
     /**
      * 根据时间区间统计用户数量
      *
-     * @param begin
-     * @param end
-     * @return
+     * @param begin 统计开始时间
+     * @param end   统计结束时间
      */
     @Override
     public UserReportVO getUserStatistics(LocalDate begin, LocalDate end) {
+        // 检查起止时间是否合法
+        if (begin.isAfter(end)) {
+            throw new RequestParamInvalidException(MessageConstant.BEGIN_TIME_IS_LATER_THAN_END_TIME);
+        }
+        // 生成x轴数据-日期列表
         List<LocalDate> dateList = new ArrayList<>();
-        dateList.add(begin);
-
-        while (!begin.equals(end)) {
-            begin = begin.plusDays(1);
+        do {
             dateList.add(begin);
-        }
-        List<Integer> newUserList = new ArrayList<>(); // 新增用户数
-        List<Integer> totalUserList = new ArrayList<>(); // 总用户数
-
-        for (LocalDate date : dateList) {
-            LocalDateTime beginTime = LocalDateTime.of(date, LocalTime.MIN);
-            LocalDateTime endTime = LocalDateTime.of(date, LocalTime.MAX);
-            // 新增用户数量 select count(id) from user where create_time > ? and create_time < ?
-            Integer newUser = getUserCount(beginTime, endTime);
-            // 总用户数量 select count(id) from user where create_time < ?
-            Integer totalUser = getUserCount(null, endTime);
-
-            newUserList.add(newUser);
-            totalUserList.add(totalUser);
-        }
-
+            begin = begin.plusDays(1);
+        } while (!begin.isAfter(end));
+        // 生成y轴数据-新增用户数列表
+        List<Integer> newUserList = dateList.stream()
+                .map(date -> userMapper.countByMap(Map.of(
+                        "begin", LocalDateTime.of(date, LocalTime.MIN),
+                        "end", LocalDateTime.of(date, LocalTime.MAX)
+                )))
+                .toList();
+        // 生成y轴数据-总用户数列表
+        List<Integer> totalUserList = dateList.stream()
+                .map(date -> userMapper.countByMap(Map.of(
+//                        "begin", null,
+                        "end", LocalDateTime.of(date, LocalTime.MAX)
+                )))
+                .toList();
+        // 返回结果数据
         return UserReportVO.builder()
-                .dateList(StringUtils.join(dateList, ","))
-                .newUserList(StringUtils.join(newUserList, ","))
-                .totalUserList(StringUtils.join(totalUserList, ","))
+                .dateList(StringUtils.join(dateList, SymbolConstant.COMMA))
+                .newUserList(StringUtils.join(newUserList, SymbolConstant.COMMA))
+                .totalUserList(StringUtils.join(totalUserList, SymbolConstant.COMMA))
                 .build();
     }
 
     /**
      * 根据时间区间统计订单数量
      *
-     * @param begin
-     * @param end
-     * @return
+     * @param begin 统计开始时间
+     * @param end   统计结束时间
      */
     public OrderReportVO getOrderStatistics(LocalDate begin, LocalDate end) {
+        // 检查起止时间是否合法
+        if (begin.isAfter(end)) {
+            throw new RequestParamInvalidException(MessageConstant.BEGIN_TIME_IS_LATER_THAN_END_TIME);
+        }
+        // 生成x轴数据-日期列表
         List<LocalDate> dateList = new ArrayList<>();
-        dateList.add(begin);
-
-        while (!begin.equals(end)) {
-            begin = begin.plusDays(1);
+        do {
             dateList.add(begin);
-        }
-        // 每天订单总数集合
-        List<Integer> orderCountList = new ArrayList<>();
-        // 每天有效订单数集合
-        List<Integer> validOrderCountList = new ArrayList<>();
-        for (LocalDate date : dateList) {
-            LocalDateTime beginTime = LocalDateTime.of(date, LocalTime.MIN);
-            LocalDateTime endTime = LocalDateTime.of(date, LocalTime.MAX);
-            // 查询每天的总订单数 select count(id) from orders where order_time > ? and order_time <
-            // ?
-            Integer orderCount = getOrderCount(beginTime, endTime, null);
-
-            // 查询每天的有效订单数 select count(id) from orders where order_time > ? and order_time <
-            // ? and status = ?
-            Integer validOrderCount = getOrderCount(beginTime, endTime, Orders.COMPLETED);
-
-            orderCountList.add(orderCount);
-            validOrderCountList.add(validOrderCount);
-        }
-
-        // 时间区间内的总订单数
-        Integer totalOrderCount = orderCountList.stream().reduce((a, b) -> a + b).get();
-        // 时间区间内的总有效订单数
-        Integer validOrderCount = validOrderCountList.stream().reduce((a, b) -> a + b).get();
-        // 订单完成率
-        Double orderCompletionRate = 0.0;
-        if (totalOrderCount != 0) {
-            orderCompletionRate = validOrderCount.doubleValue() / totalOrderCount;
-        }
+            begin = begin.plusDays(1);
+        } while (!begin.isAfter(end));
+        // 获取每天订单数集合、每天有效订单数集合
+        List<Integer> orderCountList = dateList.stream()
+                .map(date -> userMapper.countByMap(Map.of(
+                        "begin", LocalDateTime.of(date, LocalTime.MIN),
+                        "end", LocalDateTime.of(date, LocalTime.MAX)
+//                        "status", null
+                )))
+                .toList();
+        List<Integer> validOrderCountList = dateList.stream()
+                .map(date -> userMapper.countByMap(Map.of(
+                        "begin", LocalDateTime.of(date, LocalTime.MIN),
+                        "end", LocalDateTime.of(date, LocalTime.MAX),
+                        "status", Orders.COMPLETED
+                )))
+                .toList();
+        // 计算时间区间内的订单数之和、时间区间内的有效订单数之和
+        Integer totalOrderCount = orderCountList.stream().reduce(Integer::sum).orElse(0);
+        Integer validOrderCount = validOrderCountList.stream().reduce(Integer::sum).orElse(0);
+        // 计算订单完成率
+        Double orderCompletionRate = totalOrderCount == 0 ? 0.0 : validOrderCount.doubleValue() / totalOrderCount;
+        // 返回结果数据
         return OrderReportVO.builder()
-                .dateList(StringUtils.join(dateList, ","))
-                .orderCountList(StringUtils.join(orderCountList, ","))
-                .validOrderCountList(StringUtils.join(validOrderCountList, ","))
+                .dateList(StringUtils.join(dateList, SymbolConstant.COMMA))
+                .orderCountList(StringUtils.join(orderCountList, SymbolConstant.COMMA))
+                .validOrderCountList(StringUtils.join(validOrderCountList, SymbolConstant.COMMA))
                 .totalOrderCount(totalOrderCount)
                 .validOrderCount(validOrderCount)
                 .orderCompletionRate(orderCompletionRate)
                 .build();
-
     }
 
     /**
      * 查询指定时间区间内的销量排名top10
      *
-     * @param begin
-     * @param end
-     * @return
+     * @param begin 统计开始时间
+     * @param end   统计结束时间
      */
     public SalesTop10ReportVO getSalesTop10(LocalDate begin, LocalDate end) {
-        LocalDateTime beginTime = LocalDateTime.of(begin, LocalTime.MIN);
-        LocalDateTime endTime = LocalDateTime.of(end, LocalTime.MAX);
-        List<GoodsSalesDTO> goodsSalesDTOList = orderMapper.getSalesTop10(beginTime, endTime);
-
+        // 检查起止时间是否合法
+        if (begin.isAfter(end)) {
+            throw new RequestParamInvalidException(MessageConstant.BEGIN_TIME_IS_LATER_THAN_END_TIME);
+        }
+        // 获取商品销量排名Top10列表
+        List<GoodsSalesDTO> goodsSalesDTOList = orderMapper
+                .getSalesTop10(LocalDateTime.of(begin, LocalTime.MIN), LocalDateTime.of(end, LocalTime.MAX));
         String nameList = StringUtils
-                .join(goodsSalesDTOList.stream().map(GoodsSalesDTO::getName).collect(Collectors.toList()), ",");
+                .join(goodsSalesDTOList.stream().map(GoodsSalesDTO::getName).toList(), SymbolConstant.COMMA);
         String numberList = StringUtils
-                .join(goodsSalesDTOList.stream().map(GoodsSalesDTO::getNumber).collect(Collectors.toList()), ",");
-
+                .join(goodsSalesDTOList.stream().map(GoodsSalesDTO::getNumber).toList(), SymbolConstant.COMMA);
+        // 返回结果数据
         return SalesTop10ReportVO.builder()
                 .nameList(nameList)
                 .numberList(numberList)
@@ -197,97 +194,55 @@ public class ReportServiceImpl implements ReportService {
     }
 
     /**
-     * 根据时间区间统计用户数量
+     * 导出运营报表
      *
-     * @param beginTime
-     * @param endTime
-     * @return
-     */
-    private Integer getUserCount(LocalDateTime beginTime, LocalDateTime endTime) {
-        Map<String, Object> map = new HashMap<>();
-        map.put("begin", beginTime);
-        map.put("end", endTime);
-        return userMapper.countByMap(map);
-    }
-
-    /**
-     * 根据时间区间统计指定状态的订单数量
-     *
-     * @param beginTime
-     * @param endTime
-     * @param status
-     * @return
-     */
-    private Integer getOrderCount(LocalDateTime beginTime, LocalDateTime endTime, Integer status) {
-        Map<String, Object> map = new HashMap<>();
-        map.put("status", status);
-        map.put("begin", beginTime);
-        map.put("end", endTime);
-        return orderMapper.countByMap(map);
-    }
-
-    /**
-     * 导出excel
-     *
-     * @param resp
+     * @param response 导出运营报表
      */
     @Override
-    public void exportExcel(HttpServletResponse resp) {
-        // 查数据
-        LocalDate begin = LocalDate.now().minusDays(30);
-        LocalDate end = LocalDate.now().minusDays(1);
-        // 概览书
-        BusinessDataVO businessDataVO = workspaceService.getBusinessData(LocalDateTime.of(begin, LocalTime.MIN),
-                LocalDateTime.of(end, LocalTime.MAX));
-
-        // 写入excel
-        InputStream in = this.getClass().getClassLoader().getResourceAsStream("templates/运营数据报表模板.xlsx");
+    public void exportExcel(HttpServletResponse response) {
+        // 统计近30天的营业数据
+        BusinessDataVO businessDataVO = workspaceService.getBusinessData(
+                LocalDateTime.of(LocalDate.now().minusDays(30), LocalTime.MIN),
+                LocalDateTime.of(LocalDate.now().minusDays(1), LocalTime.MAX)
+        );
+        // 将统计数据写入报表Excel文件
         try {
-            XSSFWorkbook excel = new XSSFWorkbook(in);
-            // 写入时间
+            InputStream is = this.getClass().getClassLoader().getResourceAsStream("templates/运营数据报表模板.xlsx");
+            XSSFWorkbook excel = new XSSFWorkbook(is);
             XSSFSheet sheet = excel.getSheetAt(0);
-            sheet.getRow(1).getCell(1).setCellValue("时间: " + begin + " ~ " + end);
-
+            // 写入时间范围
+            sheet.getRow(1).getCell(1).setCellValue(String.format("时间：%s ~ %s",
+                    LocalDate.now().minusDays(30), LocalDate.now().minusDays(1)));
             // 写入概览数据
             sheet.getRow(3).getCell(2).setCellValue(businessDataVO.getTurnover());
             sheet.getRow(3).getCell(4).setCellValue(businessDataVO.getOrderCompletionRate());
             sheet.getRow(3).getCell(6).setCellValue(businessDataVO.getNewUsers());
             sheet.getRow(4).getCell(2).setCellValue(businessDataVO.getValidOrderCount());
             sheet.getRow(4).getCell(4).setCellValue(businessDataVO.getUnitPrice());
-
-            // 填充明细数据
+            // 写入明细数据
             for (int i = 0; i < 30; i++) {
-                LocalDate date = begin.plusDays(i);
                 // 查询每天的概览数据
-                BusinessDataVO businessData = workspaceService.getBusinessData(LocalDateTime.of(date, LocalTime.MIN),
-                        LocalDateTime.of(date, LocalTime.MAX));
+                BusinessDataVO businessData = workspaceService.getBusinessData(
+                        LocalDateTime.of(LocalDate.now().minusDays(30).plusDays(i), LocalTime.MIN),
+                        LocalDateTime.of(LocalDate.now().minusDays(30).plusDays(i), LocalTime.MAX)
+                );
                 XSSFRow row = sheet.getRow(i + 7);
-                row.getCell(1).setCellValue(date.toString());
+                row.getCell(1).setCellValue(LocalDate.now().minusDays(30).plusDays(i).toString());
                 row.getCell(2).setCellValue(businessData.getTurnover());
                 row.getCell(3).setCellValue(businessData.getValidOrderCount());
                 row.getCell(4).setCellValue(businessData.getOrderCompletionRate());
                 row.getCell(5).setCellValue(businessData.getUnitPrice());
                 row.getCell(6).setCellValue(businessData.getNewUsers());
             }
-
             // 输出流下载文件
-            ServletOutputStream out = resp.getOutputStream();
-            excel.write(out);
-
-            out.flush();
-            out.close();
+            ServletOutputStream sos = response.getOutputStream();
+            excel.write(sos);
+            // 关闭资源
+            sos.close();
             excel.close();
-        } catch (IOException e) {
-            e.printStackTrace();
-        } finally {
-
-            try {
-                in.close();
-            } catch (Exception e2) {
-                e2.printStackTrace();
-            }
+            is.close();
+        } catch (IOException ioException) {
+            throw new ReportExportException(MessageConstant.REPORT_EXPORT_EXCEPTION);
         }
-
     }
-
 }
